# small_toolkit

./: README
cuhksz_bb_summary/: .gitignore  README.md  cuhksz_bb_summary.py  requirements.txt
google_calendar_mcp/: .gitignore  README.md  pyproject.toml
google_calendar_mcp/src/google_calendar_mcp/: auth.py  calendar_api.py  server.py
terminal_ai_calendar/: .gitignore  README  agent_runner.py  calendar_tools.py  requirements.txt  tools_specification.json
terminal_ai_translator/: .gitignore  README  requirements.txt  terminal_ai_translator.py
terminal_ai_translator/dict/: stardict.py
